# sv-composer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
bible/: blend_rules.yml  frames.yml  metaphors.yml  schemas.yml
config/: beats.yml  thresholds.yml  viewpoint_rules.yml
docs/: p1-image-schemas.md  p10-sdk-api.md  p11-llm-harness.md  p2-viewpoint.md  p3-metaphor-explosion.md  p4-frames.md  p5-blending.md  p6-gold.md  p7-rag-compose.md  p8-generate.md  p9-evaluator.md
sv_api/: main.py  rag.py  utils.py
sv_blend/: blend.py  spaces.py
sv_compose/: controller.py  generate.py  render.py  trace.py
sv_control/: attention.py  expectation.py  lexicon.py  retrieval.py  viewpoint.py
sv_eval/: evaluator.py  framecheck.py  metrics.py  scorecard.py
sv_gen/: composer.py  llm_provider.py  trace.py
sv_llm/: __init__.py  harness.py
sv_p12/: __init__.py  config.py  infer.py  mapper.py  models.py  planner.py  render.py  safety.py  templates.py
sv_rag/: __init__.py  embeddings.py  index.py  select.py
sv_sdk/: __init__.py  cli.py  gold_loader.py  gold_stats.py  loader.py  models.py  validators.py  versioning.py
tests/: conftest.py  test_api_health.py  test_api_lexicon.py  test_api_schemas.py  test_attention_basic.py  test_bible_load.py  test_blend_api.py  test_blend_engine_safe.py  test_blend_engine_unsafe.py  test_blend_rules_validation.py  test_coactivate_graph.py  test_compose_api.py  test_compose_smoke.py  test_critic_revise_contracts.py  test_evaluate_api.py  (+18 more)
(+39 files in other folders)
