[tool.poetry]
name = "sv-composer"
version = "0.1.0"
description = "SV Composer foundation (PAIR-driven)."
authors = ["Your Team <team@example.com>"]
readme = "README.md"
packages = [{include = "sv_sdk"}, {include = "sv_control"}, {include = "sv_blend"}, {include = "sv_gen"}, {include = "sv_eval"}, {include = "sv_compose"}, {include = "sv_llm"}, {include = "sv_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
PyYAML = "^6.0.2"
structlog = "^24.1.0"
networkx = "^3.3"
chromadb = "^0.5.5"
sentence-transformers = "^3.0.1"
typer = "^0.12.5"
numpy = "^2.1.0"
openai = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"
httpx = "^0.27.0"
types-PyYAML = "^6.0.12.20240808"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python-version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-q --cov=sv_api --cov=sv_gen --cov=sv_eval"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sv = "sv_sdk.cli:app"
